--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet" />
 
+  <!-- Leaflet -->
+  <link crossorigin
+        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        rel="stylesheet" />
+  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  <script crossorigin
+          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+          src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js">
+  </script>
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
